[package]
name = "axum_todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11", features = ["macros"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tower-layer = "0.3.2"
uuid = { version = "1.3.0", features = ["v4","serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "json", "sqlite"] }